--- a/ResourceRecommendationEngine.ipynb
+++ b/ResourceRecommendationEngine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "4  [helpline, phoneline, chat, suicide, suicidal,...             3        1094  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,98 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.409090909090909"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "\n",
-    "#ranking system\n",
-    "\n",
-    "\n",
-    "C = df['vote_average'].mean()\n",
-    "C"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3752.3999999999996"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "m = df['vote_count'].quantile(0.6)\n",
-    "m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(9, 6)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "qualified = df.copy().loc[df['vote_count'] >= m]\n",
-    "qualified.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def weighted_rating(x, m=m, C=C):\n",
-    "    v = x['vote_count']\n",
-    "    R = x['vote_average']\n",
-    "    # Calculation based on the IMDB formula\n",
-    "    return (v/(v+m) * R) + (m/(m+v) * C)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define a new feature 'score' and calculate its value with `weighted_rating()`\n",
-    "qualified['score'] = qualified.apply(weighted_rating, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -256,65 +165,171 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Young Minds: Grief and Loss</td>\n",
+       "      <td>https://youngminds.org.uk/find-help/feelings-a...</td>\n",
+       "      <td>[grief, loss, bereavement, grieve, death]</td>\n",
        "      <td>2</td>\n",
-       "      <td>Samaritans Website</td>\n",
-       "      <td>https://www.samaritans.org/</td>\n",
-       "      <td>[information, suicide, suicidal, kill, harm, die]</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4357</td>\n",
+       "      <td>4556</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>NHS Suicide Help</td>\n",
-       "      <td>https://www.nhs.uk/conditions/suicide/</td>\n",
-       "      <td>[information, suicide, suicidal, death, harm]</td>\n",
-       "      <td>5</td>\n",
-       "      <td>123</td>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>NHS: Bereavement and Young People</td>\n",
+       "      <td>https://www.nhs.uk/conditions/stress-anxiety-d...</td>\n",
+       "      <td>[grief, loss, bereavement, grieve, death]</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2434</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Samaritans Support</td>\n",
-       "      <td>https://www.samaritans.org/how-we-can-help/con...</td>\n",
-       "      <td>[helpline, phoneline, chat, suicide, suicidal,...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1094</td>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Grief Encounter Phoneline</td>\n",
+       "      <td>https://www.griefencounter.org.uk/</td>\n",
+       "      <td>[helpline, grief, loss, bereavement, grieve, d...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>22</td>\n",
+       "      <td>Grief: Support for Young People</td>\n",
+       "      <td>https://apps.apple.com/gb/app/grief-support-fo...</td>\n",
+       "      <td>[app, journaling, grief, loss, bereavement, gr...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5424</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   r_id                name  \\\n",
-       "1     2  Samaritans Website   \n",
-       "2     3    NHS Suicide Help   \n",
-       "4     5  Samaritans Support   \n",
+       "    r_id                               name  \\\n",
+       "5      6        Young Minds: Grief and Loss   \n",
+       "6      7  NHS: Bereavement and Young People   \n",
+       "7      8          Grief Encounter Phoneline   \n",
+       "21    22    Grief: Support for Young People   \n",
        "\n",
-       "                                                 url  \\\n",
-       "1                        https://www.samaritans.org/   \n",
-       "2             https://www.nhs.uk/conditions/suicide/   \n",
-       "4  https://www.samaritans.org/how-we-can-help/con...   \n",
+       "                                                  url  \\\n",
+       "5   https://youngminds.org.uk/find-help/feelings-a...   \n",
+       "6   https://www.nhs.uk/conditions/stress-anxiety-d...   \n",
+       "7                  https://www.griefencounter.org.uk/   \n",
+       "21  https://apps.apple.com/gb/app/grief-support-fo...   \n",
        "\n",
-       "                                                tags  vote_average  vote_count  \n",
-       "1  [information, suicide, suicidal, kill, harm, die]             5        4357  \n",
-       "2      [information, suicide, suicidal, death, harm]             5         123  \n",
-       "4  [helpline, phoneline, chat, suicide, suicidal,...             3        1094  "
+       "                                                 tags  vote_average  \\\n",
+       "5           [grief, loss, bereavement, grieve, death]             2   \n",
+       "6           [grief, loss, bereavement, grieve, death]             2   \n",
+       "7   [helpline, grief, loss, bereavement, grieve, d...             4   \n",
+       "21  [app, journaling, grief, loss, bereavement, gr...             4   \n",
+       "\n",
+       "    vote_count  \n",
+       "5         4556  \n",
+       "6         2434  \n",
+       "7          232  \n",
+       "21        5424  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df['tags'].str.contains(\"suicide\")]"
+    "dfS = df[df['tags'].str.contains(\"grief\")]\n",
+    "dfS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.0"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#ranking system\n",
+    "C = dfS['vote_average'].mean()\n",
+    "C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4131.599999999999"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = dfS['vote_count'].quantile(0.6)\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 6)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qualified = dfS.copy().loc[dfS['vote_count'] >= m]\n",
+    "qualified.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def weighted_rating(x, m=m, C=C):\n",
+    "    v = x['vote_count']\n",
+    "    R = x['vote_average']\n",
+    "    # Calculation based on the IMDB formula\n",
+    "    return (v/(v+m) * R) + (m/(m+v) * C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a new feature 'score' and calculate its value with `weighted_rating()`\n",
+    "qualified['score'] = qualified.apply(weighted_rating, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -346,25 +361,18 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Samaritans Website</td>\n",
-       "      <td>4357</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4.263851</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>The Mix: Support</td>\n",
-       "      <td>5474</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3.759676</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>Grief: Support for Young People</td>\n",
        "      <td>5424</td>\n",
        "      <td>4</td>\n",
-       "      <td>3.758366</td>\n",
+       "      <td>3.567625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Young Minds: Grief and Loss</td>\n",
+       "      <td>4556</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.475574</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -372,12 +380,11 @@
       ],
       "text/plain": [
        "                               name  vote_count  vote_average     score\n",
-       "1                Samaritans Website        4357             5  4.263851\n",
-       "10                 The Mix: Support        5474             4  3.759676\n",
-       "21  Grief: Support for Young People        5424             4  3.758366"
+       "21  Grief: Support for Young People        5424             4  3.567625\n",
+       "5       Young Minds: Grief and Loss        4556             2  2.475574"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
