--- a/ResourceRecommendationEngine.ipynb
+++ b/ResourceRecommendationEngine.ipynb
@@ -18,9 +18,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>r_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>url</th>\n",
+       "      <th>tags</th>\n",
+       "      <th>vote_average</th>\n",
+       "      <th>vote_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Headspace</td>\n",
+       "      <td>https://www.headspace.com/</td>\n",
+       "      <td>[mindfulness, meditation, sleep, stress, anxie...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>343</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Samaritans Website</td>\n",
+       "      <td>https://www.samaritans.org/</td>\n",
+       "      <td>[information, suicide, suicidal, kill, harm, d...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1964</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>NHS Suicide Help</td>\n",
+       "      <td>https://www.nhs.uk/conditions/suicide/</td>\n",
+       "      <td>[information, suicide]</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5787</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>NHS Self Harm Help</td>\n",
+       "      <td>https://www.nhs.uk/conditions/self-harm/</td>\n",
+       "      <td>[information, selfharm]</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1575</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Samaritans Support</td>\n",
+       "      <td>https://www.samaritans.org/how-we-can-help/con...</td>\n",
+       "      <td>[helpline, phoneline, chat, suicide, suicidal,...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5868</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   r_id                  name  \\\n",
+       "0     1             Headspace   \n",
+       "1     2   Samaritans Website    \n",
+       "2     3      NHS Suicide Help   \n",
+       "3     4    NHS Self Harm Help   \n",
+       "4     5  Samaritans Support     \n",
+       "\n",
+       "                                                 url  \\\n",
+       "0                         https://www.headspace.com/   \n",
+       "1                        https://www.samaritans.org/   \n",
+       "2             https://www.nhs.uk/conditions/suicide/   \n",
+       "3           https://www.nhs.uk/conditions/self-harm/   \n",
+       "4  https://www.samaritans.org/how-we-can-help/con...   \n",
+       "\n",
+       "                                                tags  vote_average  vote_count  \n",
+       "0  [mindfulness, meditation, sleep, stress, anxie...             5         343  \n",
+       "1  [information, suicide, suicidal, kill, harm, d...             4        1964  \n",
+       "2                             [information, suicide]             5        5787  \n",
+       "3                            [information, selfharm]             5        1575  \n",
+       "4  [helpline, phoneline, chat, suicide, suicidal,...             4        5868  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Importing the pandas and numpy libraries, as well as particular modules from sklearn.\n",
     "import pandas as pd\n",
@@ -44,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 636,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +250,7 @@
        "21        1694  "
       ]
      },
-     "execution_count": 636,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 615,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +293,7 @@
        "2.5"
       ]
      },
-     "execution_count": 615,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 616,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +315,7 @@
        "2897.2999999999997"
       ]
      },
-     "execution_count": 616,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 617,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +337,7 @@
        "(3, 6)"
       ]
      },
-     "execution_count": 617,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 618,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 619,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +424,7 @@
        "5  https://youngminds.org.uk/find-help/feelings-a...  "
       ]
      },
-     "execution_count": 619,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 637,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 638,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +526,7 @@
        "0  [{'tag_name': 'KEYWORD', 'parsed_value': 'scho...  "
       ]
      },
-     "execution_count": 638,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 639,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 640,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +593,7 @@
        "0   school     0.909"
       ]
      },
-     "execution_count": 640,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 641,
+   "execution_count": 55,
    "metadata": {
     "scrolled": true
    },
@@ -551,15 +658,6 @@
        "      <td>1609</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>36</td>\n",
-       "      <td>Headspace App</td>\n",
-       "      <td>https://www.headspace.com/headspace-meditation...</td>\n",
-       "      <td>[app, relax, meditation, midnfullness, student...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2122</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>37</th>\n",
        "      <td>38</td>\n",
        "      <td>Surviving Exams</td>\n",
@@ -603,7 +701,6 @@
        "    r_id                 name  \\\n",
        "24    25              For Me    \n",
        "34    35   Student Health App   \n",
-       "35    36       Headspace App    \n",
        "37    38     Surviving Exams    \n",
        "39    40               Flora    \n",
        "40    41              My Life   \n",
@@ -612,7 +709,6 @@
        "                                                  url  \\\n",
        "24  https://apps.apple.com/gb/app/for-me-app/id109...   \n",
        "34  https://www.nhs.uk/apps-library/student-health...   \n",
-       "35  https://www.headspace.com/headspace-meditation...   \n",
        "37  https://www.nhs.uk/conditions/stress-anxiety-d...   \n",
        "39                        https://flora.appfinca.com/   \n",
        "40                                   https://my.life/   \n",
@@ -621,7 +717,6 @@
        "                                                 tags  vote_average  \\\n",
        "24  [app, chat, forums, counselling, mood tracking...             4   \n",
        "34                     [app, student, school, health]             3   \n",
-       "35  [app, relax, meditation, midnfullness, student...             1   \n",
        "37     [information, exams, school, students, stress]             4   \n",
        "39  [app, focus, productivity, stress, school, exa...             5   \n",
        "40  [app, students, school, study, calm, breathe, ...             4   \n",
@@ -630,14 +725,13 @@
        "    vote_count  \n",
        "24        5474  \n",
        "34        1609  \n",
-       "35        2122  \n",
        "37        4597  \n",
        "39        5097  \n",
        "40        5554  \n",
        "41         867  "
       ]
      },
-     "execution_count": 641,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 620,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +837,7 @@
        "4  https://www.samaritans.org/how-we-can-help/con...  "
       ]
      },
-     "execution_count": 620,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 621,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 622,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 623,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,73 +888,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 642,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ask me to recommend you a resource: Wysa\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>url</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Headspace</td>\n",
-       "      <td>https://www.headspace.com/</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Stoic</td>\n",
-       "      <td>https://www.stoicroutine.com/</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>Flora</td>\n",
-       "      <td>https://flora.appfinca.com/</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         name                            url\n",
-       "0   Headspace     https://www.headspace.com/\n",
-       "18     Stoic   https://www.stoicroutine.com/\n",
-       "39     Flora     https://flora.appfinca.com/"
-      ]
-     },
-     "execution_count": 642,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rec = input(\"Ask me to recommend you a resource: \")\n",
     "dfR = recommend(rec)\n",
@@ -878,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 625,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +981,7 @@
        "4    68     3       4"
       ]
      },
-     "execution_count": 625,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -968,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 626,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -978,30 +1008,30 @@
       "Evaluating RMSE, MAE of algorithm SVD on 5 split(s).\n",
       "\n",
       "                  Fold 1  Fold 2  Fold 3  Fold 4  Fold 5  Mean    Std     \n",
-      "RMSE (testset)    1.4657  1.6393  1.3414  1.3810  1.4625  1.4580  0.1024  \n",
-      "MAE (testset)     1.2607  1.4698  1.1560  1.2001  1.2781  1.2729  0.1076  \n",
-      "Fit time          0.06    0.03    0.02    0.02    0.02    0.03    0.02    \n",
-      "Test time         0.01    0.00    0.00    0.00    0.00    0.00    0.00    \n"
+      "RMSE (testset)    1.4478  1.4617  1.5018  1.5320  1.3873  1.4661  0.0494  \n",
+      "MAE (testset)     1.2808  1.2732  1.3221  1.3306  1.2316  1.2876  0.0358  \n",
+      "Fit time          0.07    0.17    0.06    0.07    0.06    0.09    0.04    \n",
+      "Test time         0.00    0.00    0.00    0.00    0.00    0.00    0.00    \n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'test_rmse': array([1.46568765, 1.63926273, 1.34135454, 1.38103464, 1.46251326]),\n",
-       " 'test_mae': array([1.2607092 , 1.46975444, 1.15595313, 1.20006824, 1.27806652]),\n",
-       " 'fit_time': (0.05863308906555176,\n",
-       "  0.033702850341796875,\n",
-       "  0.021668672561645508,\n",
-       "  0.01994800567626953,\n",
-       "  0.018419981002807617),\n",
-       " 'test_time': (0.007441043853759766,\n",
-       "  0.0009410381317138672,\n",
-       "  0.0007350444793701172,\n",
-       "  0.0007178783416748047,\n",
-       "  0.0005171298980712891)}"
+       "{'test_rmse': array([1.44782133, 1.46168613, 1.50180184, 1.53196609, 1.38726006]),\n",
+       " 'test_mae': array([1.28076543, 1.27315148, 1.32213653, 1.33055805, 1.23163416]),\n",
+       " 'fit_time': (0.06837296485900879,\n",
+       "  0.16732478141784668,\n",
+       "  0.05792403221130371,\n",
+       "  0.07211518287658691,\n",
+       "  0.06330108642578125),\n",
+       " 'test_time': (0.002408266067504883,\n",
+       "  0.0013701915740966797,\n",
+       "  0.0014498233795166016,\n",
+       "  0.0034508705139160156,\n",
+       "  0.0008590221405029297)}"
       ]
      },
-     "execution_count": 626,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,16 +1044,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 627,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x11eefcbb0>"
+       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x116f5ca30>"
       ]
      },
-     "execution_count": 627,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,14 +1065,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 643,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ask me to predict the ratings for a user: 7\n"
+      "Ask me to predict the ratings for a user: 6\n"
      ]
     },
     {
@@ -1072,38 +1102,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Grief Encounter Phoneline</td>\n",
-       "      <td>7.891517</td>\n",
+       "      <th>18</th>\n",
+       "      <td>Stoic</td>\n",
+       "      <td>13.556670</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Young Minds: Grief and Loss</td>\n",
-       "      <td>6.211432</td>\n",
+       "      <th>40</th>\n",
+       "      <td>My Life</td>\n",
+       "      <td>10.727373</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Grief: Support for Young People</td>\n",
-       "      <td>5.685320</td>\n",
+       "      <th>17</th>\n",
+       "      <td>Wysa</td>\n",
+       "      <td>8.776912</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>NHS: Bereavement and Young People</td>\n",
-       "      <td>5.661718</td>\n",
+       "      <th>0</th>\n",
+       "      <td>Headspace</td>\n",
+       "      <td>8.508111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Smiling Mind</td>\n",
+       "      <td>5.746054</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                 name  prediction\n",
-       "7          Grief Encounter Phoneline     7.891517\n",
-       "5         Young Minds: Grief and Loss    6.211432\n",
-       "21   Grief: Support for Young People     5.685320\n",
-       "6   NHS: Bereavement and Young People    5.661718"
+       "            name  prediction\n",
+       "18        Stoic    13.556670\n",
+       "40       My Life   10.727373\n",
+       "17          Wysa    8.776912\n",
+       "0      Headspace    8.508111\n",
+       "20  Smiling Mind    5.746054"
       ]
      },
-     "execution_count": 643,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,7 +1155,7 @@
     "\n",
     "dfP = pd.DataFrame(predictions, columns = [\"prediction\"])\n",
     "dfP = pd.merge(df, dfP, left_index=True, right_index=True)\n",
-    "dfP = dfP[dfP['tags'].str.contains(\"grief\")]\n",
+    "dfP = dfP[dfP['tags'].str.contains(\"meditation\")]\n",
     "\n",
     "\n",
     "# Calculating the average vote average for each resource in the dataframe\n",
@@ -1150,13 +1186,6 @@
     "# Printing the top recommendations\n",
     "dfP[['name', 'prediction']].head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
